<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SMSAutoReplyActivity!</string>
    <string name="app_name">SMSAutoReply - By DXD</string>
    <string name="contact_me">我的QQ:89651097 :)</string>
    <string name="plz_contact_me">联系我噢:)</string>
    <string name="auto_send">自动回复</string>
    <string name="auto_settings">自动发送设置</string>
    <string name="reply_txt_settings">回复内容设置</string>
    <string name="soft_settings">软件设置</string>
    <string name="clear">清 空</string>
    <string name="save">保 存</string>
    <string name="input_hint">请输入自动回复的内容</string>
    <string name="confirm">确 定</string>
    <string name="cancel">取 消</string>
    <string name="confirm_clear">确定清空内容?</string>
    <string name="no_sd_card">手机没有挂载SD卡</string>
    <string name="refresh"> 刷 新 </string>
    <string name="sms_refreshing">短信列表刷新中。。。</string>
    <string name="clear_sms_rec">清空发送记录</string>
    <string name="searchBlueTooth">搜索蓝牙设备</string>
    <string name="hh">您家</string>
</resources>