<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView android:id="@+id/lst_sms"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="6"></ListView>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button android:id="@+id/btn_refresh"
            android:text="@string/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_auto_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/auto_settings" />
        
        <Button android:id="@+id/btn_txt_settings"
            android:text="@string/reply_txt_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip" />

        <Button
            android:id="@+id/btn_setBlueTooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="蓝牙设置" />
    </LinearLayout>
    
</LinearLayout>